INDEX.HTML - CORPO DO PROJETO

--- a/index.html
+++ b/index.html
@@ -10,20 +10,34 @@
     <title>Range Hotels</title>
   </head>
   <body>
-    <header class="header_menu">
+    <header class="header_menu max__width">
       <img
         class="image__header"
         src="/assets/images/logo_mob.svg"
         alt="Logo Hotel"
       />
-      <nav class="nav_header">
-        <ul class="nav__menu">
-          <li>Home</li>
-          <li>Hospedagem</li>
-          <li>Promoções</li>
-          <li>Localização</li>
+      <nav class="nav__menu">
+        <ul>
+          <li><a href="#" target="_blank">Home</a></li>
+          <li><a href="#" target="_blank">Hospedagem</a></li>
+          <li><a href="#" target="_blank">Promoções</a></li>
+          <li><a href="#" target="_blank">Localização</a></li>
         </ul>
       </nav>
     </header>
+
+    <section class="heroBanner">
+      <div class="maxWidth">
+        <div class="heroBanner_iconPlay">
+          <img src="/assets/images/icon_play.svg" alt="" />
+        </div>
+        <h1 class="heroBanner_title">Descubra e surpreenda-se</h1>
+        <h2 class="heroBanner_subtitle">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae fugit,
+          quisquam non doloremque deserunt corrupti!
+        </h2>
+        <a href="#" class="heroBanner_btn">Descubra mais</a>
+      </div>
+    </section>
   </body>
 </html>
