--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="/css/normalize.css" />
     <link rel="stylesheet" href="/css/style.css" />
     <link rel="stylesheet" href="/css/media_query.css" />
+    <link rel="stylesheet" href="/assets/icomoon-icon/style.css" />
 
     <title>Range Hotels</title>
   </head>
@@ -37,6 +38,55 @@
           quisquam non doloremque deserunt corrupti!
         </h2>
         <a href="#" class="heroBanner_btn">Descubra mais</a>
+      </div>
+    </section>
+
+    <section class="middleContent">
+      <div class="maxWidth row">
+        <article class="col col-sm-12 col-md-6 col-xl-3">
+          <a href="#">
+            <span class="icon-home3"></span>
+            <h3 class="middleContent_title">Hospedagem</h3>
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae
+              quos cupiditate nostrum quia ipsum praesentium at error voluptates
+              eaque commodi?
+            </p>
+          </a>
+        </article>
+        <article class="col col-sm-12 col-md-6 col-xl-3">
+          <a href="#">
+            <span class="icon-map"></span>
+            <h3 class="middleContent_title">Localização</h3>
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae
+              quos cupiditate nostrum quia ipsum praesentium at error voluptates
+              eaque commodi?
+            </p>
+          </a>
+        </article>
+        <article class="col col-sm-12 col-md-6 col-xl-3">
+          <a href="#">
+            <span class="icon-spoon-knife"></span>
+            <h3 class="middleContent_title">Restaurantes</h3>
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae
+              quos cupiditate nostrum quia ipsum praesentium at error voluptates
+              eaque commodi?
+            </p>
+          </a>
+        </article>
+        <article class="col col-sm-12 col-md-6 col-xl-3">
+          <a href="#">
+            <span class="icon-bubbles4"></span>
+            <h3 class="middleContent_title">Fale conosco</h3>
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae
+              quos cupiditate nostrum quia ipsum praesentium at error voluptates
+              eaque commodi?
+            </p>
+          </a>
+        </article>
       </div>
     </section>
   </body>
