--- a/index.html
+++ b/index.html
@@ -27,67 +27,122 @@
       </nav>
     </header>
 
-    <section class="heroBanner">
-      <div class="maxWidth">
-        <div class="heroBanner_iconPlay">
-          <img src="/assets/images/icon_play.svg" alt="" />
+    <main>
+      <section class="heroBanner">
+        <div class="maxWidth">
+          <div class="heroBanner_iconPlay">
+            <img src="/assets/images/icon_play.svg" alt="" />
+          </div>
+          <h1 class="heroBanner_title">Descubra e surpreenda-se</h1>
+          <h2 class="heroBanner_subtitle">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae fugit,
+            quisquam non doloremque deserunt corrupti!
+          </h2>
+          <a href="#" class="heroBanner_btn">Descubra mais</a>
         </div>
-        <h1 class="heroBanner_title">Descubra e surpreenda-se</h1>
-        <h2 class="heroBanner_subtitle">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae fugit,
-          quisquam non doloremque deserunt corrupti!
-        </h2>
-        <a href="#" class="heroBanner_btn">Descubra mais</a>
-      </div>
-    </section>
+      </section>
 
-    <section class="middleContent">
-      <div class="maxWidth row">
-        <article class="col col-sm-12 col-md-6 col-xl-3">
-          <a href="#">
-            <span class="icon-home3"></span>
-            <h3 class="middleContent_title">Hospedagem</h3>
-            <p>
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae
-              quos cupiditate nostrum quia ipsum praesentium at error voluptates
-              eaque commodi?
-            </p>
-          </a>
-        </article>
-        <article class="col col-sm-12 col-md-6 col-xl-3">
-          <a href="#">
-            <span class="icon-map"></span>
-            <h3 class="middleContent_title">Localização</h3>
-            <p>
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae
-              quos cupiditate nostrum quia ipsum praesentium at error voluptates
-              eaque commodi?
-            </p>
-          </a>
-        </article>
-        <article class="col col-sm-12 col-md-6 col-xl-3">
-          <a href="#">
-            <span class="icon-spoon-knife"></span>
-            <h3 class="middleContent_title">Restaurantes</h3>
-            <p>
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae
-              quos cupiditate nostrum quia ipsum praesentium at error voluptates
-              eaque commodi?
-            </p>
-          </a>
-        </article>
-        <article class="col col-sm-12 col-md-6 col-xl-3">
-          <a href="#">
-            <span class="icon-bubbles4"></span>
-            <h3 class="middleContent_title">Fale conosco</h3>
-            <p>
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae
-              quos cupiditate nostrum quia ipsum praesentium at error voluptates
-              eaque commodi?
-            </p>
-          </a>
-        </article>
-      </div>
-    </section>
+      <section class="middleContent">
+        <div class="maxWidth row">
+          <article class="col col-sm-12 col-md-6 col-xl-3">
+            <a href="#">
+              <span class="icon-home3"></span>
+              <h3 class="middleContent_title">Hospedagem</h3>
+              <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae
+                quos cupiditate nostrum quia ipsum praesentium at error
+                voluptates eaque commodi?
+              </p>
+            </a>
+          </article>
+          <article class="col col-sm-12 col-md-6 col-xl-3">
+            <a href="#">
+              <span class="icon-map"></span>
+              <h3 class="middleContent_title">Localização</h3>
+              <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae
+                quos cupiditate nostrum quia ipsum praesentium at error
+                voluptates eaque commodi?
+              </p>
+            </a>
+          </article>
+          <article class="col col-sm-12 col-md-6 col-xl-3">
+            <a href="#">
+              <span class="icon-spoon-knife"></span>
+              <h3 class="middleContent_title">Restaurantes</h3>
+              <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae
+                quos cupiditate nostrum quia ipsum praesentium at error
+                voluptates eaque commodi?
+              </p>
+            </a>
+          </article>
+          <article class="col col-sm-12 col-md-6 col-xl-3">
+            <a href="#">
+              <span class="icon-bubbles4"></span>
+              <h3 class="middleContent_title">Fale conosco</h3>
+              <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae
+                quos cupiditate nostrum quia ipsum praesentium at error
+                voluptates eaque commodi?
+              </p>
+            </a>
+          </article>
+        </div>
+      </section>
+
+      <section class="mainContent">
+        <div class="row maxWidth">
+          <article class="mainContent_article col-sm-12 col-xl-6">
+            <div class="mainContent_img">
+              <img src="./assets/images/hostel.png" alt="Hostel" />
+            </div>
+            <div class="mainContent_text">
+              <h3 class="mainContent_title">Hostel</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. In
+                eveniet veritatis autem explicabo. Commodi, laboriosam!
+              </p>
+            </div>
+          </article>
+          <article class="mainContent_article col-sm-12 col-xl-6">
+            <div class="mainContent_img">
+              <img src="./assets/images/chale.png" alt="Chalés" />
+            </div>
+            <div class="mainContent_text">
+              <h3 class="mainContent_title">Chalés</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. In
+                eveniet veritatis autem explicabo. Commodi, laboriosam!
+              </p>
+            </div>
+          </article>
+          <article class="mainContent_article col-sm-12 col-xl-6">
+            <div class="mainContent_img">
+              <img src="./assets/images/familiar.png" alt="Familiar" />
+            </div>
+            <div class="mainContent_text">
+              <h3 class="mainContent_title">Familiar</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. In
+                eveniet veritatis autem explicabo. Commodi, laboriosam!
+              </p>
+            </div>
+          </article>
+          <article class="mainContent_article col-sm-12 col-xl-6">
+            <div class="mainContent_img">
+              <img src="./assets/images/romantico.png" alt="Romântico" />
+            </div>
+            <div class="mainContent_text">
+              <h3 class="mainContent_title">Romântico</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. In
+                eveniet veritatis autem explicabo. Commodi, laboriosam!
+              </p>
+            </div>
+          </article>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
