index.html adicionado div  mainContent_container para estruturação e footer.

--- a/index.html
+++ b/index.html
@@ -94,55 +94,70 @@
       <section class="mainContent">
         <div class="row maxWidth">
           <article class="mainContent_article col-sm-12 col-xl-6">
-            <div class="mainContent_img">
-              <img src="./assets/images/hostel.png" alt="Hostel" />
-            </div>
-            <div class="mainContent_text">
-              <h3 class="mainContent_title">Hostel</h3>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. In
-                eveniet veritatis autem explicabo. Commodi, laboriosam!
-              </p>
-            </div>
-          </article>
-          <article class="mainContent_article col-sm-12 col-xl-6">
-            <div class="mainContent_img">
-              <img src="./assets/images/chale.png" alt="Chalés" />
-            </div>
-            <div class="mainContent_text">
-              <h3 class="mainContent_title">Chalés</h3>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. In
-                eveniet veritatis autem explicabo. Commodi, laboriosam!
-              </p>
+            <div class="mainContent_container">
+              <div class="mainContent_img">
+                <img src="./assets/images/hostel.png" alt="Hostel" />
+              </div>
+              <div class="mainContent_text">
+                <h3 class="mainContent_title">Hostel</h3>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. In
+                  eveniet veritatis autem explicabo. Commodi, laboriosam!
+                </p>
+              </div>
             </div>
           </article>
           <article class="mainContent_article col-sm-12 col-xl-6">
-            <div class="mainContent_img">
-              <img src="./assets/images/familiar.png" alt="Familiar" />
-            </div>
-            <div class="mainContent_text">
-              <h3 class="mainContent_title">Familiar</h3>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. In
-                eveniet veritatis autem explicabo. Commodi, laboriosam!
-              </p>
+            <div class="mainContent_container">
+              <div class="mainContent_img">
+                <img src="./assets/images/chale.png" alt="Chalés" />
+              </div>
+              <div class="mainContent_text">
+                <h3 class="mainContent_title">Chalés</h3>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. In
+                  eveniet veritatis autem explicabo. Commodi, laboriosam!
+                </p>
+              </div>
             </div>
           </article>
           <article class="mainContent_article col-sm-12 col-xl-6">
-            <div class="mainContent_img">
-              <img src="./assets/images/romantico.png" alt="Romântico" />
+            <div class="mainContent_container">
+              <div class="mainContent_img">
+                <img src="./assets/images/familiar.png" alt="Familiar" />
+              </div>
+              <div class="mainContent_text">
+                <h3 class="mainContent_title">Familiar</h3>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. In
+                  eveniet veritatis autem explicabo. Commodi, laboriosam!
+                </p>
+              </div>
             </div>
-            <div class="mainContent_text">
-              <h3 class="mainContent_title">Romântico</h3>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. In
-                eveniet veritatis autem explicabo. Commodi, laboriosam!
-              </p>
+          </article>
+          <article class="mainContent_article col-sm-12 col-xl-6">
+            <div class="mainContent_container">
+              <div class="mainContent_img">
+                <img src="./assets/images/romantico.png" alt="Romântico" />
+              </div>
+              <div class="mainContent_text">
+                <h3 class="mainContent_title">Romântico</h3>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. In
+                  eveniet veritatis autem explicabo. Commodi, laboriosam!
+                </p>
+              </div>
             </div>
           </article>
         </div>
       </section>
     </main>
+    <footer class="footer">
+      <p>Copyright The Range</p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione,
+        cupiditate.
+      </p>
+    </footer>
   </body>
 </html>
