Index.html adicionado mais informações

--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
           <h1 class="heroBanner_title">Descubra e surpreenda-se</h1>
           <h2 class="heroBanner_subtitle">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae fugit,
-            quisquam non doloremque deserunt corrupti!
+            quisquam non doloremque deserunt corrupti! Lorem ipsum dolor sit
+            amet consectetur adipisicing elit.
           </h2>
           <a href="#" class="heroBanner_btn">Descubra mais</a>
         </div>
@@ -51,7 +52,8 @@
               <p>
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae
                 quos cupiditate nostrum quia ipsum praesentium at error
-                voluptates eaque commodi?
+                voluptates eaque commodi? Lorem ipsum dolor sit amet consectetur
+                adipisicing elit.
               </p>
             </a>
           </article>
@@ -62,7 +64,8 @@
               <p>
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae
                 quos cupiditate nostrum quia ipsum praesentium at error
-                voluptates eaque commodi?
+                voluptates eaque commodi? Lorem ipsum dolor sit. Lorem ipsum
+                dolor, sit amet consectetur adipisicing elit. Deleniti, harum.
               </p>
             </a>
           </article>
@@ -73,7 +76,9 @@
               <p>
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae
                 quos cupiditate nostrum quia ipsum praesentium at error
-                voluptates eaque commodi?
+                voluptates eaque commodi? Lorem ipsum dolor, sit amet
+                consectetur adipisicing elit. Voluptatem natus aspernatur
+                veritatis.
               </p>
             </a>
           </article>
@@ -84,7 +89,8 @@
               <p>
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae
                 quos cupiditate nostrum quia ipsum praesentium at error
-                voluptates eaque commodi?
+                voluptates eaque commodi? Lorem ipsum dolor sit amet consectetur
+                adipisicing elit. Cumque hic sunt animi?
               </p>
             </a>
           </article>
